@@ -1,6 +1,9 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.4.3
 Date: 18/12/25
+  Bugfixes:
+    - Fixed that the Quantum Bazaar tries to spill items on ground instead of limiting output if your inventory is full.
+    - Fixed that the Quantum Bazaar wouldn't work in remote view.
 ---------------------------------------------------------------------------------------------------
 Version: 1.4.2
 Date: 18/12/25
